--- a/购物车1.html
+++ b/购物车1.html
@@ -198,7 +198,7 @@
             <span>发现</span></a>
     </div>
     <div>
-        <a href="购物车.html"><p class="iconfont">&#xe748;</p>
+        <a href="购物车1.html"><p class="iconfont">&#xe748;</p>
             <span>购物车</span></a>
     </div>
     <div>
